src/css/home.css
body {
  overflow-x: hidden;
}
.main-header {
  width: 100%;
  position: relative;
  background: url(../images/home_page_header.jpg);
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  min-height: 85vh;
}
.main-header h1 {
  color: white;
  font-size: 6rem;
  font-weight: bold;
  padding-top: 50 px;
}

.main-header .titles {
  max-width: 70%;
  text-align: left;
}

.main-header .buttons {
  display: flex;
  justify-content: space-around;
  align-items: center;
}

.main-header .buttons h2 {
  display: inline;
  color: white;
  font-size: 3rem;
  font-weight: regular;
}

.see-more-arrow {
  border: solid white;
  position: absolute;
  bottom: 0;
  width: 5px;
  height: 5px;
  border-width: 0 5px 5px 0;
  display: inline-block;
  padding: 3px;
  margin-bottom: 10px;
  transform: rotate(45deg);
  -webkit-transform: rotate(45deg);
}

.time-and-directions-parent {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  width: 100%;
  height: 20vh;
}
.time-and-directions-child {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  width: 30%;
  color: #122149;
  font-size: 1.1em;
  font-weight: bold;
}
.time-and-directions-child img {
  width: 40px;
  height: auto;
  margin: 20px;
  fill: #122149;
}

.secondary-content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  font-size: 1.5em;
}
.secondary-content .content-block {
  display: flex;
  flex-direction: row;

  justify-content: center;
  align-items: center;
}

.secondary-content .content-block .words {
  width: 25%;
  margin: 2rem;
}
.secondary-content .content-block .words h2 {
  text-align: center;
}
.secondary-content .content-block .words h3 {
  text-align: center;
  color: grey;
  font-size: 1em;
}
.secondary-content .content-block img {
  width: 35%;
  margin: 2rem;
}

.full-width-promos {
  font-size: 1.5em;
}
.end-times-promo-container {
  position: relative;
  width: 100%;
  height: auto;
  display: flex;
  align-items: center;
  justify-content: center;
}

.end-times-promo-container .end-times-button {
  position: absolute;
  top: 75%;
}

.end-times-promo-container img {
  margin-left: auto;
  margin-right: auto;
  width: 100%;
  height: auto;
}
.end-times-promo-container .mobile-description {
  display: none;
}
.end-times-promo-container .mobile-rev-button {
  display: none;
}
.current-series-promo-container {
  width: 100%;
  background-image: url(../images/matthew_background.jpg);
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  align-items: center;
}
.current-series-promo-container .current-series-desc {
  display: flex;
  color: white;
  border-radius: 15px;
  flex-direction: column;
  justify-self: center;
  justify-content: center;
  align-items: center;
  width: 30%;
  padding: 20px;
}
.current-series-desc a {
  color: white;
}
.current-series-promo-container img {
  justify-self: flex-end;
  width: 40%;
  height: auto;
}

@media (max-width: 800px) {
  .main-header {
    width: 100%;
    background: url(../images/home_page_header.jpg);
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    max-height: 50vh;
  }
  .main-header h1 {
    color: white;
    font-size: 3rem;
    font-weight: bold;
    padding-top: 50 px;
  }
  .main-header .titles {
    max-width: 90%;
    text-align: center;
  }

  .main-header .buttons {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  .main-header .buttons h2 {
    display: inline;
    color: white;
    font-size: 2rem;
    text-align: center;
    font-weight: regular;
  }
  .main-header .see-more-arrow {
    border: solid white;
    width: 5px;
    height: 5px;
    border-width: 0 5px 5px 0;
    display: inline-block;
    margin-top: 200px;
    padding: 3px;
    transform: rotate(45deg);
    -webkit-transform: rotate(45deg);
  }

  .secondary-content .content-block {
    display: flex;
    flex-direction: column;
    justify-content: center;
  }
  #connection-meeting {
    flex-direction: column-reverse;
  }
  .secondary-content .content-block .words {
    width: 75%;
  }
  .secondary-content .content-block .words h2 {
    text-align: center;
  }
  .secondary-content .content-block .words h3 {
    text-align: center;
    color: grey;
    font-size: 1em;
  }
  .secondary-content .content-block img {
    width: 75%;
  }

  .full-width-promos {
    font-size: 1.5em;
  }
  .end-times-promo-container {
    position: relative;
    width: 100%;
    height: auto;
    display: flex;
    align-items: center;
    flex-direction: column;
    justify-content: center;
  }

  .end-times-promo-container .end-times-button {
    display: none;
  }

  .end-times-promo-container img {
    margin-left: auto;
    margin-right: auto;
    width: 100%;
    height: auto;
  }
  .end-times-promo-container .mobile-description {
    display: block;
    width: 75%;
  }

  .current-series-promo-container {
    width: 100%;
    background-image: url(../images/matthew_background.jpg);
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    display: flex;
    flex-flow: column-reverse;
    justify-content: center;
    align-items: center;
  }
  .current-series-promo-container .current-series-desc {
    display: flex;
    color: white;
    border-radius: 15px;
    flex-direction: column;
    justify-self: center;
    justify-content: center;
    align-items: center;
    width: 75%;
    padding: 20px;
  }
  .current-series-desc a {
    color: white;
  }
  .current-series-promo-container img {
    width: 75%;
    padding: 20px;
    height: auto;
  }
}

